--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -15,7 +15,12 @@
     $.get("/tasks").success( function(data) {
       let htmlString = "";
       $.each(data, function(index, task) {
-        let liElement = '<li><div class="view"><input class="toggle" type="checkbox"><label>' + task.title + '</label></div></li>';
+        const checkedStatus = task.done ? "checked" : "";
+        let liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
+        checkedStatus +
+        '><label>' +
+         task.title +
+         '</label></div></li>';
         htmlString += liElement;
       });
       const ulTodos = $('.todo-list');
