Initial toggle function

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -25,6 +25,9 @@
       });
       const ulTodos = $('.todo-list');
       ulTodos.html(htmlString);
+      $('.toggle').change(function() {
+        console.log('Toggle!');
+      })
     });
   });
 </script>
