--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -17,6 +17,7 @@
       $.each(data, function(index, task) {
         const checkedStatus = task.done ? "checked" : "";
         let liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
+        "data-id='" + task.id + "'" +
         checkedStatus +
         '><label>' +
          task.title +
@@ -25,9 +26,21 @@
       });
       const ulTodos = $('.todo-list');
       ulTodos.html(htmlString);
-      $('.toggle').change(function() {
-        console.log('Toggle!');
-      })
+      //Toggle function
+      $('.toggle').change(function(e) {
+        const itemId = $(e.target).data("id");
+        console.log(itemId);
+
+        const doneValue = Boolean($(e.target).is(':checked'));
+        console.log("done:", doneValue);
+
+        $.post("/tasks/" + itemId, {
+          _method: "Put", 
+          task: {
+            done: doneValue
+          }
+        });
+      });
     });
   });
 </script>
