--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -12,35 +12,49 @@
 
 <script> 
   $(function() {
-    $.get("/tasks").success( function(data) {
-      let htmlString = "";
-      $.each(data, function(index, task) {
-        const checkedStatus = task.done ? "checked" : "";
+
+    // The taskHtml method takes in a JavaScript representation
+    // of the task and produces an HTML representation using
+    // <li> tags
+  function taskHtml(task) {
+    const checkedStatus = task.done ? "checked" : "";
         let liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
         "data-id='" + task.id + "'" +
         checkedStatus +
         '><label>' +
          task.title +
          '</label></div></li>';
-        htmlString += liElement;
+         return liElement;
+  }
+
+    // toggleTask takes in an HTML representation of
+    // an event that fires from an HTML representation of
+    // the toggle checkbox and  performs an API request to toggle
+    // the value of the `done` field
+    function toggleTask(e) {
+      var itemId = $(e.target).data("id");
+
+      var doneValue = Boolean($(e.target).is(':checked'));
+
+      $.post("/tasks/" + itemId, {
+        _method: "PUT",
+        task: {
+          done: doneValue
+        }
+      });
+    }
+    $.get("/tasks").success( function(data) {
+      let htmlString = "";
+
+      $.each(data, function(index, task) {
+        htmlString += taskHtml(task);
       });
       const ulTodos = $('.todo-list');
       ulTodos.html(htmlString);
-      //Toggle function
-      $('.toggle').change(function(e) {
-        const itemId = $(e.target).data("id");
-        console.log(itemId);
 
-        const doneValue = Boolean($(e.target).is(':checked'));
-        console.log("done:", doneValue);
-
-        $.post("/tasks/" + itemId, {
-          _method: "Put", 
-          task: {
-            done: doneValue
-          }
-        });
+      $('.toggle').change(toggleTask);
+        
       });
     });
-  });
+ 
 </script>
