--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,9 @@
 <section class="todoapp">
   <header class="header">
     <h1>todos</h1>
+    <form id="new-form"> 
+      <input type="text" class="new-todo">
+    </form>
   </header>
 
   <section class="main">
@@ -12,6 +15,13 @@
 
 <script> 
   $(function() {
+
+    //Input form 
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      const textbox = $(".new-todo").val();
+      console.log("Task: ", textbox);
+    })
 
     // The taskHtml method takes in a JavaScript representation
     // of the task and produces an HTML representation using
