--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -16,12 +16,19 @@
 <script> 
   $(function() {
 
-    //Input form 
+    //Input form API post request
     $('#new-form').submit(function(event) {
       event.preventDefault();
-      const textbox = $(".new-todo").val();
-      console.log("Task: ", textbox);
-    })
+      const textbox = $(".new-todo");
+      const payload = {
+        task: {
+          title: textbox.val()
+        }
+      };
+      $.post("/tasks", payload).success(function(data) {
+        console.log("Successful HTTP request");
+      });
+    });
 
     // The taskHtml method takes in a JavaScript representation
     // of the task and produces an HTML representation using
