--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -16,19 +16,7 @@
 <script> 
   $(function() {
 
-    //Input form API post request
-    $('#new-form').submit(function(event) {
-      event.preventDefault();
-      const textbox = $(".new-todo");
-      const payload = {
-        task: {
-          title: textbox.val()
-        }
-      };
-      $.post("/tasks", payload).success(function(data) {
-        console.log("Successful HTTP request");
-      });
-    });
+    
 
     // The taskHtml method takes in a JavaScript representation
     // of the task and produces an HTML representation using
@@ -66,12 +54,30 @@
       $.each(data, function(index, task) {
         htmlString += taskHtml(task);
       });
-      const ulTodos = $('.todo-list');
+      let ulTodos = $('.todo-list');
       ulTodos.html(htmlString);
 
       $('.toggle').change(toggleTask);
         
       });
+
+         //Input form API post request
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      const textbox = $(".new-todo");
+      const payload = {
+        task: {
+          title: textbox.val()
+        }
+      };
+      $.post("/tasks", payload).success(function(data) {
+        const htmlString = taskHtml(data);
+        let ulTodos = $('.todo-list');
+        ulTodos.append(htmlString);
+        $('.toggle').click(toggleTask);
+      });
+    });
+    
     });
  
 </script>
